<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_pet_name"
                style="@style/EditorFieldStyle"
                android:autofillHints=""
                android:hint="@string/hint_pet_name"
                android:inputType="textCapWords"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_pet_breed"
                style="@style/EditorFieldStyle"
                android:autofillHints=""
                android:hint="@string/hint_pet_breed"
                android:inputType="textCapWords"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_gender" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingEnd="16dp"
                android:spinnerMode="dropdown"
                tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_measurement" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_pet_weight"
                style="@style/EditorFieldStyle"
                android:autofillHints=""
                android:hint="@string/hint_pet_weight"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/label_weight_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_pet_weight" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
